--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 
 Builds/
 # JuceLibraryCode/
+JUCE/Builds/
+JUCE/extras/
+JUCE/docs/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
