--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -48,17 +48,10 @@ jobs:
 
       - name: Set JUCE module path for Projucer (CI)
         run: |
-          set -euo pipefail
-          PROJUCER_BIN="$PWD/build/ProjucerOut/Projucer.app/Contents/MacOS/Projucer"
-          if [ ! -f "$PROJUCER_BIN" ]; then
-            echo "Expected Projucer binary not found at: $PROJUCER_BIN"
-            echo "ProjucerOut contents:"
-            find "$PWD/build/ProjucerOut" -maxdepth 6 -print || true
-            exit 1
-          fi
-
-          chmod +x "$PROJUCER_BIN"
-          "$PROJUCER_BIN" --set-global-search-path modules "$PWD/JUCE/modules"
+            set -euo pipefail
+            PROJUCER_BIN="$PWD/build/ProjucerOut/Projucer.app/Contents/MacOS/Projucer"
+            chmod +x "$PROJUCER_BIN"
+            "$PROJUCER_BIN" --set-global-search-path macosx "$PWD/JUCE/modules"
 
       - name: Resave .jucer to generate Xcode project
         run: |
